<?xml version="1.0"?>
<package format="2">
  <name>sentech_gige_driver</name>
  <version>0.0.0</version>
  <description>The sentech_gige_driver package</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
  </export>
</package>
